Bug FIXED: Overflow of classification List. Also fixed font size of same.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -324,20 +324,35 @@ a.button-collapse i:hover {
 
 .classes {
     position: relative;
-    max-height: 100vh;
+    /* max-height: 100vh; */
     width: 90%;
     margin: auto;
     padding: 5px;
     border: 1px solid #c9dcff;
     background-color: #ecfdb7;
-    font-size: 1.5em;
+    font-size: 1em;
     box-shadow: 0px 0px 5px #c9dcff;
+    /* overflow-y: scroll; */
+}
+
+@media screen and (min-width: 775px) {
+    .classes {
+        font-size: 1.5em;
+    }
 }
 
 .classes>ul>li {
     border-bottom: 1px solid #e8d4d4;
     border-radius: 30px/3px;
     font-size: 0.7em;
+}
+
+@media screen and (min-width: 600px) {
+    .classes>ul>li {
+        border-bottom: 1px solid #e8d4d4;
+        border-radius: 30px/3px;
+        font-size: 1em;
+    }
 }
 
 .classList {
@@ -354,13 +369,7 @@ a.button-collapse i:hover {
 }
 
 
-@media screen and (min-width: 600px) {
-    .classes>ul>li {
-        border-bottom: 1px solid #e8d4d4;
-        border-radius: 30px/3px;
-        font-size: 1em;
-    }
-}
+
 
 .framed {
     border: 1px solid red;
